--- a/Back_Card_Template.html
+++ b/Back_Card_Template.html
@@ -1,9 +1,11 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
     <div id="printableCard">
@@ -143,8 +145,41 @@
             <p id="FinalSem2_16th"></p>
             <p id="GenAve2"></p>
 
+            <p id="q1maka-diyos1"></p>
+            <p id="q1maka-diyos2"></p>
+            <p id="q1makatao1"></p>
+            <p id="q1makatao2"></p>
+            <p id="q1makakalikasan"></p>
+            <p id="q1makabansa1"></p>
+            <p id="q1makabansa2"></p>
+
+            <p id="q2maka-diyos1"></p>
+            <p id="q2maka-diyos2"></p>
+            <p id="q2makatao1"></p>
+            <p id="q2makatao2"></p>
+            <p id="q2makakalikasan"></p>
+            <p id="q2makabansa1"></p>
+            <p id="q2makabansa2"></p>
+
+            <p id="q3maka-diyos1"></p>
+            <p id="q3maka-diyos2"></p>
+            <p id="q3makatao1"></p>
+            <p id="q3makatao2"></p>
+            <p id="q3makakalikasan"></p>
+            <p id="q3makabansa1"></p>
+            <p id="q3makabansa2"></p>
+
+            <p id="q4maka-diyos1"></p>
+            <p id="q4maka-diyos2"></p>
+            <p id="q4makatao1"></p>
+            <p id="q4makatao2"></p>
+            <p id="q4makakalikasan"></p>
+            <p id="q4makabansa1"></p>
+            <p id="q4makabansa2"></p>
+
         </div>
     </div>
 
 </body>
+
 </html>
