--- a/Front_Card_Template.html
+++ b/Front_Card_Template.html
@@ -1,9 +1,11 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
     <div id="progressContainer" style="display:none;">
@@ -15,15 +17,15 @@
 
         <div class="overlay-text">
 
-            <p id="studentName" ></p>
-            <p id="studentAge" ></p>
-            <p id="studentGender" ></p>
-            <p id="studentGrade" ></p>
-            <p id="studentSection" ></p>
-            <p id="studentSchoolYear" ></p>
-            <p id="studentLRN" ></p>
-            <p id="studentTrack" ></p>
-            <p id="studentStrand" ></p>
+            <p id="studentName"></p>
+            <p id="studentAge"></p>
+            <p id="studentGender"></p>
+            <p id="studentGrade"></p>
+            <p id="studentSection"></p>
+            <p id="studentSchoolYear"></p>
+            <p id="studentLRN"></p>
+            <p id="studentTrack"></p>
+            <p id="studentStrand"></p>
             <p id="studentTrackStrand"></p>
             <div id="principalameWrapper" class="name-wrapper">
                 <p id="principalame" class="name-text"></p>
@@ -230,8 +232,20 @@
                 <p id="absent12Days" class="absentdays-text"></p>
             </div>
 
+            <div id="totalSchoolDays">
+                <p id="totalSchoolDaysText" class="totaldays-text"></p>
+            </div>
+
+            <div id="totalPresentDays">
+                <p id="totalPresentDaysText" class="totaldays-text"></p>
+            </div>
+
+            <div id="totalAbsentDays">
+                <p id="totalAbsentDaysText" class="totaldays-text"></p>
+            </div>
         </div>
     </div>
 
 </body>
+
 </html>
