--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ function login() {
         localStorage.setItem("currentUser", JSON.stringify(user));
 
         if (username === "Adviser") {
-            window.location.href = "Dashboard.html";
+            window.location.href = "Student Information c.html";
         } else if (username === "Sub-Teacher") {
             window.location.href = "dashboard_adviser.html";
         }
