--- a/sidebar.html
+++ b/sidebar.html
@@ -9,7 +9,10 @@
 </li>
 <li class="nav-item"><a class="nav-link" href="Student Information c.html">Student Information</a></li>
 <li class="nav-item"><a class="nav-link" href="Grades (First Sem) c.html">Grades (First Sem)</a></li>
+<li class="nav-item"><a class="nav-link" href="Grades (Second Sem) c.html">Grades (Second Sem)</a></li>
 <li class="nav-item"><a class="nav-link" href="Attendance c.html">Attendance</a></li>
+<li class="nav-item"><a class="nav-link" href="core values.html">Core-Values</a></li>
+<li class="nav-item"><button onclick="logout()" class="nav-link">Logout</button></li>
 
 <nav class="navbar navbar-light bg-primary shadow-sm fixed-top" data-bs-theme="dark">
     <div class="container-fluid">
@@ -23,5 +26,4 @@
             </div>
         </div>
     </div>
-
 </nav>
