--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
                 /* Sure na naka-center */
                 height: auto;
                 min-height: fit-content;
+                margin-top: -10px;
             }
 
             .logos-container {
