--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CarGen Login</title>
+    <title>CardGen Login</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -41,6 +41,7 @@
             opacity: 0.1;
             pointer-events: none;
             background-size: 90% auto;
+            animation: fadeInBG 2s ease-out;
         }
 
         @media (max-width: 991px) and (min-width: 768px) {
@@ -78,6 +79,7 @@
             max-width: 450px;
             width: 100%;
             z-index: 10000;
+            animation: fadeInUp 0.6s ease-out;
         }
 
         .Login_header {
@@ -95,11 +97,13 @@
             color: var(--secondary-color);
             font-family: 'Fjalla One', sans-serif;
             font-size: 2em;
+            animation: fadeIn 1.5s ease-out;
         }
 
         .input_box {
             position: relative;
             margin-top: 20px;
+            animation: fadeIn 1s ease-out;
         }
 
         .toggle-password {
@@ -110,6 +114,7 @@
             cursor: pointer;
             font-size: 1.2rem;
             color: var(--primary-color);
+            animation: fadeIn 1s ease-out;
         }
 
         .toggle-password:hover {
@@ -119,6 +124,7 @@
         .input_box1 {
             position: relative;
             margin-top: 50px;
+            animation: fadeIn 1s ease-out;
         }
 
         .Forgot {
@@ -155,6 +161,7 @@
             pointer-events: none;
             transition: 0.2s;
             color: var(--shadow);
+            animation: fadeInUp 1s ease-out;
         }
 
         .input-field:focus~.label,
@@ -178,6 +185,7 @@
             font-size: 16px;
             cursor: pointer;
             margin: 20px 0;
+            animation: fadeInUp 1s ease-out;
         }
 
         .input-submit:hover {
@@ -212,6 +220,7 @@
             justify-content: center;
             background: var(--gradient-main);
             overflow: hidden;
+            animation: scaleIn 0.5s ease-out 0.2s backwards;
         }
 
         .logo-circle img {
@@ -219,6 +228,7 @@
             height: 85%;
             border-radius: 50%;
             object-fit: cover;
+            animation: scaleIn 1s ease-out 0.5s backwards;
         }
 
         /* FIXED wrapper class - para hindi na kailangan mag-scroll */
@@ -242,7 +252,7 @@
                 padding: 12px;
                 align-items: center;
                 /* INADD: Para iwas scroll */
-                overflow-y: hidden;
+                overflow-y: auto;
                 /* Para pwede pa rin mag-scroll kung sobrang liit ng screen */
             }
 
@@ -391,6 +401,87 @@
         .login-header {
             display: none;
         }
+
+
+
+        /* Animations */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 2;
+            }
+        }
+
+        @keyframes fadeInBG {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 0.1;
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes scaleIn {
+            from {
+                opacity: 0;
+                transform: scale(0.8);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        @keyframes shake {
+
+            0%,
+            100% {
+                transform: translateX(0);
+            }
+
+            25% {
+                transform: translateX(-10px);
+            }
+
+            75% {
+                transform: translateX(10px);
+            }
+        }
     </style>
 </head>
 
@@ -428,10 +519,6 @@
     </div>
 
     <script>
-        const users = [
-            { username: "Adviser", password: "adviser123" },
-            { username: "Sub-Teacher", password: "teacher123" }
-        ];
 
         function login() {
             const username = document.getElementById("username").value.trim();
@@ -443,7 +530,7 @@
                 localStorage.setItem("currentUser", JSON.stringify(user));
 
                 if (username === "Adviser") {
-                    window.location.href = "pages/Student_Information.html";
+                    window.location.href = "Student Information c.html";
                 } else if (username === "Sub-Teacher") {
                     window.location.href = "dashboard_adviser.html";
                 }
@@ -492,9 +579,11 @@
         togglePasswordIcon.addEventListener("click", function () {
             const type = passwordInputField.getAttribute("type") === "password" ? "text" : "password";
             passwordInputField.setAttribute("type", type);
+
             this.classList.toggle("bi-eye");
             this.classList.toggle("bi-eye-slash");
         });
+
     </script>
 
     <script src="assets/js/Toast.js"></script>
