--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                 localStorage.setItem("currentUser", JSON.stringify(user));
 
                 if (username === "Adviser") {
-                    window.location.href = "Student Information c.html";
+                    window.location.href = "Student_Information.html";
                 } else if (username === "Sub-Teacher") {
                     window.location.href = "dashboard_adviser.html";
                 }
